2009-11-25  Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_modules.php: fix the deletion of module in the function
	"delete_agent_module" for change the name to avoid the row collision. This
	change is advised by Sancho lerena.

2009-11-25  Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_io.php, include/functions.php: change and add functions
	for manage the input output with correct encoding and decoding.

	*include/functions_html.php, include/functions_ui.php,
	operation/agentes/status_monitor.php,
	operation/agentes/estado_ultimopaquete.php,
	operation/agentes/estado_monitores.php: change the function "salida_limpia"
	for "safe_output" and other changes.

2009-11-25  Miguel de Dios <miguel.dedios@artica.es>

	* godmode/alerts/alert_list.php: add column status of alert in alert
	management view in agent.

2009-11-22  Raul Mateos  <raulofpandora@gmail.com>

	* images/spinner.png, images/background-li.png: New images converted
	from gif.

	* *.php: Changed several files from spinner.gif to spinner.png.

	* extensions/update_manager/settings.php: Changed header.

2009-11-21  Raul Mateos  <raulofpandora@gmail.com>

	* godmode/alerts/alert_list.php, operation/events/events.php,
	operation/snmpconsole/snmp_view.php: Use down icon instead wand icon, 
	due to wand is reserved for creation purposes.

	* godmode/agentes/module_manager_editor.php: Added header and down icon.

2009-11-21  Raul Mateos  <raulofpandora@gmail.com>

	* extensions/*.php: Changed title for all extensions, improving common
	apparence. By the way... It's my brithday!!!

2009-11-19  Miguel de Dios <miguel.dedios@artica.es>

	* include/functions.php: change the "safe_input" for estandarize the input
	and clean bugs for this cause. Now Pandora Console depends of 5.2.3 PHP
	version or up.
	* extensions/dbmanager.php: change the source code to use correctly the
	"safe_input".

2009-11-19  Miguel de Dios <miguel.dedios@artica.es>
